[package]
name = "uno_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.1"
actix-web-actors="4.1.0"
actix="0.13.0"
uuid= { version="0.8", features=["v4", "serde"]}
colored = "2.0.0"
lazy_static = "1.4.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tokio-tungstenite = "0.17.1"
actix-rt = "2.7.0"
futures-util = "0.3.21"
strum_macros = "0.24.0"
serde_derive = "1.0.137"
clap = "3.1.15"
toml = "0.5.9"
